--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage":"https://anacorral10.github.io/memory-game",
+  "homepage":"https://anacorral10.github.io/fend-project-memory-game-master",
   "dependencies": {
     "gh-pages": "^2.0.1"
   }
